# Alpha_Vk_Bot

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: backend_sdk.py  bot.py  constants.py  entities.py  exceptions.py  http_client.py  logger.py  main.py  utils.py
src/common/: constants.py  entities.py  exceptions.py  logger.py  redis_client.py  utils.py
src/handlers/: __init__.py  form_handler.py  greeting_handler.py
src/server/: auth.py  main.py
src/server/api/: router.py  schemas.py
src/vk_bot/: backend_sdk.py  bot.py  http_client.py  main.py  redis_state_dispenser.py
src/vk_bot/handlers/: __init__.py  edit_forms_handler.py  form_handler.py  greeting_handler.py  interview_handler.py
