[project]
name = "alpha-vk-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр",email = "av.sanya@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "vkbottle (>=4.8.1,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
