[project]
name = "alpha-vk-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Александр",email = "av.sanya@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "vkbottle (>=4.8.1,<5.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "aiohttp (>=3.13.5,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.48.0,<0.49.0)",
    "pyjwt (>=2.13.0,<3.0.0)",
    "redis (>=7.4.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
